fixed the rest of the pages to fit

--- a/3DPrints.html
+++ b/3DPrints.html
@@ -1,14 +1,12 @@
 ﻿<!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
-  <head>
+<head>
     <meta charset="utf-8" />
     <title>3D Prints - Porky Productions</title>
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.js"
-      integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.js"
+            integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+            crossorigin="anonymous"></script>
     <!-----SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS----->
 
     <script src="js/Utility.js"></script>
@@ -21,69 +19,66 @@
     <link rel="stylesheet" href="css/footer.css" />
     <link rel="icon" type="icon" href="assets/HedgehogIcon.png" />
     <!--FAVICON-->
-  </head>
+</head>
 
-  <body>
+<body>
     <div id="header" class="header">
-      <!--Hegdehog logo thing-->
-      <a href="index.html" class="logo">
-        <img
-          src="https://lh3.googleusercontent.com/k-u9rOXwTYfcI8FFUc_8yLpkOBHc0C-uG7MZC-xzG4_w4Z3exV0m0iMTbWJ2yGfxMUR2OjfAe-rdDn7xwhptNoh4mWP3KE10yBYD59oAFR8q-ZPcOn026JLPfq5foH7MoTUoawCiNA=w270-h214-p-k"
-          width="100"
-          height="70"
-          alt="Hedgehog Logo"
-        />
-      </a>
-      <div
-        id="logoText"
-        class="header-logoText"
-        style="left: 150px; top: 40px; font-size: 32px"
-      >
-        PorkyProductions
-      </div>
-      <div class="header-right">
-        <!--Different headers-->
-        <a href="index.html">Home</a>
-        <a href="games.html">Games</a>
-        <a class="active" href="3DPrints.html">3D Prints</a>
-        <a href="Models.html">Models</a>
-        <a href="develop.html">Developments</a>
-      </div>
+        <!--Hegdehog logo thing-->
+        <a href="index.html" class="logo">
+            <img src="https://lh3.googleusercontent.com/k-u9rOXwTYfcI8FFUc_8yLpkOBHc0C-uG7MZC-xzG4_w4Z3exV0m0iMTbWJ2yGfxMUR2OjfAe-rdDn7xwhptNoh4mWP3KE10yBYD59oAFR8q-ZPcOn026JLPfq5foH7MoTUoawCiNA=w270-h214-p-k"
+                 width="100"
+                 height="70"
+                 alt="Hedgehog Logo" />
+        </a>
+        <div id="logoText"
+             class="header-logoText"
+             style="left: 150px; top: 40px; font-size: 32px">
+            PorkyProductions
+        </div>
+        <div class="header-right">
+            <!--Different headers-->
+            <a href="index.html">Home</a>
+            <a href="games.html">Games</a>
+            <a class="active" href="3DPrints.html">3D Prints</a>
+            <a href="Models.html">Models</a>
+            <a href="develop.html">Developments</a>
+        </div>
     </div>
     <br />
     <div style="padding-left: 20px">
-      <div class="mainTitle">
-        <h1>3D Prints</h1>
-      </div>
-      <br />
-      <img src="images/IMG_4488.JPG" width="10" class="center" alt="imperial credit" />
-      <p class="mainBody">THE IMPERIAL CREDIT</p>
-      <br />
-      <p class="mainBody">
-        This is a new replacement for the existing monetary standard. <br />
-        Instead of having this currency regulated by governemnts, this is the
-        world's first currency to be controlled by a company<br />
-        It does not have to rely on cryptography and is cheap and easy to
-        produce via a 3D Printer.
-      </p>
+        <div class="mainTitle">
+            <h1>3D Prints</h1>
+        </div>
+        <br />
+        <img src="images/IMG_4488.JPG" width="10" class="center" alt="imperial credit" />
+        <p class="mainBody">THE IMPERIAL CREDIT</p>
+        <br />
+        <p class="mainBody">
+            This is a new replacement for the existing monetary standard. <br />
+            Instead of having this currency regulated by governemnts, this is the
+            world's first currency to be controlled by a company<br />
+            It does not have to rely on cryptography and is cheap and easy to
+            produce via a 3D Printer.
+        </p>
     </div>
     <div class="footer">
-      <br>
-      <br>
-      <img src="assets/PPio logo.png" width="25%" class="image-center" alt="Porky Productions Logo"/>
-      <br>
-      <p class="text-center">
-        Porky Productions is a group of highly established individuals namely
-        Tristan and Ryan, who are on the path for technological development
-        in many areas. This website is meant to showcase our accomplishments
-        as well as to create something that we can be proud about.
-      </p>
-      <a class="center" href="index.html">Home</a>
-      <a class="center" href="games.html">Games</a>
-      <a class="center" href="3DPrints.html">3D Prints</a>
-      <a class="center" href="Models.html">Models</a>
-      <a class="center" href="develop.html">Developments</a>
-      <a class="center" href="https://practical-lamport-2debac.netlify.app/">Sister Site (identical, if this site doesn't work, try this)</a>
+        <br>
+        <br>
+        <img src="assets/PPio logo.png" width="25%" class="image-center" alt="Porky Productions Logo" />
+        <br>
+        <p class="text-center">
+            Porky Productions is a group of highly established individuals namely
+            Tristan and Ryan, who are on the path for technological development
+            in many areas. This website is meant to showcase our accomplishments
+            as well as to create something that we can be proud about.
+        </p>
+        <a class="center" href="index.html">Home</a>
+        <a class="center" href="games.html">Games</a>
+        <a class="center" href="3DPrints.html">3D Prints</a>
+        <a class="center" href="Models.html">Models</a>
+        <a class="center" href="develop.html">Developments</a>
+        <a class="center" href="https://practical-lamport-2debac.netlify.app/">Sister Site (identical, if this site doesn't work, try this)</a>
     </div>
-  </body>
+</body>
 </html>
+<!--Hi there reader. It looks like youve reached the end of our code. Thats pretty cool. Have you been working this entire time? Maybe give yourself a break. You work more productive when youre not tired :) -->
