--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,14 +8,15 @@
     <link rel="icon" type="icon" href="assets/HedgehogIcon.png" />
     <!--FAVICON-->
     <title>404 Page Not Found</title>
-  </head>
-  <body>
+</head>
+<body>
     <h1 class="mainTitle">404</h1>
     <h3 class="mainTitle">Thats an Error</h3>
     <h4 class="mainBody">The page you are looking for does not exist</h4>
     <h5 class="mainBody">Try going home</h5>
     <button onclick="window.location.href='index.html'" class="center">
-      Home
+        Home
     </button>
-  </body>
+</body>
 </html>
+<!--Hi there reader. It looks like youve reached the end of our code. Thats pretty cool. Have you been working this entire time? Maybe give yourself a break. You work more productive when youre not tired :) -->
