--- a/develop.html
+++ b/develop.html
@@ -1,14 +1,12 @@
 ﻿<!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
-  <head>
+<head>
     <meta charset="utf-8" />
     <title>Developments - Porky Productions</title>
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.js"
-      integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.js"
+            integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+            crossorigin="anonymous"></script>
     <!-----SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS----->
 
     <script src="js/Header.js"></script>
@@ -20,88 +18,85 @@
     <link rel="stylesheet" href="css/index.css" />
     <link rel="stylesheet" href="css/footer.css" />
     <link rel="icon" type="icon" href="assets/HedgehogIcon.png" /> <!--FAVICON-->
-  </head>
+</head>
 
-  <body>
+<body>
     <div id="header" class="header">
-      <!--Hegdehog logo thing-->
-      <a href="index.html" class="logo">
-        <img
-          src="https://lh3.googleusercontent.com/k-u9rOXwTYfcI8FFUc_8yLpkOBHc0C-uG7MZC-xzG4_w4Z3exV0m0iMTbWJ2yGfxMUR2OjfAe-rdDn7xwhptNoh4mWP3KE10yBYD59oAFR8q-ZPcOn026JLPfq5foH7MoTUoawCiNA=w270-h214-p-k"
-          width="100"
-          height="70"
-        />
-      </a>
-      <div
-        id="logoText"
-        class="header-logoText"
-        style="left: 150px; top: 40px; font-size: 32px"
-      >
-        PorkyProductions
-      </div>
-      <div class="header-right">
-          <!--Different headers-->
-          <a href="index.html">Home</a>
-          <a href="games.html">Games</a>
-          <a href="3DPrints.html">3D Prints</a>
-          <a href="Models.html">Models</a>
-          <a class="active" href="develop.html">Developments</a>
-      </div>
+        <!--Hegdehog logo thing-->
+        <a href="index.html" class="logo">
+            <img src="https://lh3.googleusercontent.com/k-u9rOXwTYfcI8FFUc_8yLpkOBHc0C-uG7MZC-xzG4_w4Z3exV0m0iMTbWJ2yGfxMUR2OjfAe-rdDn7xwhptNoh4mWP3KE10yBYD59oAFR8q-ZPcOn026JLPfq5foH7MoTUoawCiNA=w270-h214-p-k"
+                 width="100"
+                 height="70" />
+        </a>
+        <div id="logoText"
+             class="header-logoText"
+             style="left: 150px; top: 40px; font-size: 32px">
+            PorkyProductions
+        </div>
+        <div class="header-right">
+            <!--Different headers-->
+            <a href="index.html">Home</a>
+            <a href="games.html">Games</a>
+            <a href="3DPrints.html">3D Prints</a>
+            <a href="Models.html">Models</a>
+            <a class="active" href="develop.html">Developments</a>
+        </div>
     </div>
     <br />
     <div style="padding-left: 20px">
-      <div class="mainTitle">
-        <h1>Technlogical Developments</h1>
-      </div>
-      <br />
-      <p class="mainBody">
-        Here at PorkyProductions we are working on a variety of projects. We innovate new technologies everyday, and create new ways to interact with the world around us. <br>
-        <br>
-        We are currently working on a variety of projects, and we are always looking for new ideas to work on.
-        <br>
-        <br>
-        Some of the projects we are working on include:
-        <br>
-        <br>
-        <a href="https://github.com/PorkyProductions/PorkyOS">PorkyOS</a>
+        <div class="mainTitle">
+            <h1>Technlogical Developments</h1>
+        </div>
+        <br />
         <p class="mainBody">
-          PorkyOS is a new operating system for x86_64 computers. It is currently being developed by PorkyProductions. It is a fully featured operating system, with a fully featured GUI.
-          <br>
-          It is written in C and forked from Linux, so there should be no compatibility issues.
-          </p>
-        <br>
-        <a href="https://github.com/PorkyProductions/-de-Motivator" class="center" >(de)Motivator</a>
+            Here at PorkyProductions we are working on a variety of projects. We innovate new technologies everyday, and create new ways to interact with the world around us. <br>
+            <br>
+            We are currently working on a variety of projects, and we are always looking for new ideas to work on.
+            <br>
+            <br>
+            Some of the projects we are working on include:
+            <br>
+            <br>
+            <a href="https://github.com/PorkyProductions/PorkyOS">PorkyOS</a>
         <p class="mainBody">
-          (de)Motivator is a simple web application that generates a random insult for the user. It is written in TypeScript and HTML + CSS.
-          <br>
-          It is currently being developed by PorkyProductions.
-          </p>
+            PorkyOS is a new operating system for x86_64 computers. It is currently being developed by PorkyProductions. It is a fully featured operating system, with a fully featured GUI.
+            <br>
+            It is written in C and forked from Linux, so there should be no compatibility issues.
+        </p>
         <br>
-        <a href="https://github.com/PorkyProductions/PorkyNet" class="center" >PorkyNet</a>
+        <a href="https://github.com/PorkyProductions/-de-Motivator" class="center">(de)Motivator</a>
         <p class="mainBody">
-          PorkyNet is a modern web browser that is designed to be a modern replacement for the old web browser. It is written in C++ and uses the Qt framework. It is forked from Chromium.
-          <br>
-          It is currently being developed by PorkyProductions.
-          </p>
-      </p>
+            (de)Motivator is a simple web application that generates a random insult for the user. It is written in TypeScript and HTML + CSS.
+            <br>
+            It is currently being developed by PorkyProductions.
+        </p>
+        <br>
+        <a href="https://github.com/PorkyProductions/PorkyNet" class="center">PorkyNet</a>
+        <p class="mainBody">
+            PorkyNet is a modern web browser that is designed to be a modern replacement for the old web browser. It is written in C++ and uses the Qt framework. It is forked from Chromium.
+            <br>
+            It is currently being developed by PorkyProductions.
+        </p>
+        </p>
     </div>
     <div class="footer">
-      <br>
-      <br>
-      <img src="assets/PPio logo.png" width="25%" class="image-center" alt="Porky Prodcutions Logo"/>
-      <br>
-      <p class="text-center">
-        Porky Productions is a group of highly established individuals namely
-        Tristan and Ryan, who are on the path for technological development
-        in many areas. This website is meant to showcase our accomplishments
-        as well as to create something that we can be proud about.
-      </p>
-      <a class="center" href="index.html">Home</a>
-      <a class="center" href="games.html">Games</a>
-      <a class="center" href="3DPrints.html">3D Prints</a>
-      <a class="center" href="Models.html">Models</a>
-      <a class="center" href="develop.html">Developments</a>
-      <a class="center" href="https://practical-lamport-2debac.netlify.app/">Sister Site (identical, if this site doesn't work, try this)</a>
+        <br>
+        <br>
+        <img src="assets/PPio logo.png" width="25%" class="image-center" alt="Porky Prodcutions Logo" />
+        <br>
+        <p class="text-center">
+            Porky Productions is a group of highly established individuals namely
+            Tristan and Ryan, who are on the path for technological development
+            in many areas. This website is meant to showcase our accomplishments
+            as well as to create something that we can be proud about.
+        </p>
+        <a class="center" href="index.html">Home</a>
+        <a class="center" href="games.html">Games</a>
+        <a class="center" href="3DPrints.html">3D Prints</a>
+        <a class="center" href="Models.html">Models</a>
+        <a class="center" href="develop.html">Developments</a>
+        <a class="center" href="https://practical-lamport-2debac.netlify.app/">Sister Site (identical, if this site doesn't work, try this)</a>
     </div>
-  </body>
+</body>
 </html>
+<!--Hi there reader. It looks like youve reached the end of our code. Thats pretty cool. Have you been working this entire time? Maybe give yourself a break. You work more productive when youre not tired :) -->
