--- a/Models.html
+++ b/Models.html
@@ -47,7 +47,7 @@
     <br />
     <div style="padding-left: 20px">
         <div class="mainTitle">
-            <h1>3D Models</h1>
+            <h1>3D Model Showcase</h1>
         </div>
         <br />
         <div class="mainBody-grid">
