added line <br> before and after problematic text

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
               Our story begins in 2017, when our founders, Tristan and Ryan met in school. 
               They became friends and eventually discorvered that they could make a website using the "Google Sites" service.
               What better thing to make a website about than a hedgehog pencil sharpener that Tristan had brought to school and named "Porky".
-              After this website (PorkyPictures.inc) was created, many other websites followed such as PorkySchool.edu, PorkyPizza.eat, and PorkyBlackHolesThatWillDestroyTheEntireUniverseSoYouProbablyShouldntUseThem.com.com.inc <br>
+              After this website (PorkyPictures.inc) was created, many other websites followed such as PorkySchool.edu, PorkyPizza.eat, and <br> PorkyBlackHolesThatWillDestroyTheEntireUniverseSoYouProbablyShouldntUseThem.com.com.inc  <br>
               At this point, Porky had developed a cult following. But then, sadly, a hater of porky stole the pencil sharpener, and destroyed it.
               However, at the last moment, Porky transferred into a Hedgehog plush, where it resides to this day. 
               Later on, the old websites were archived, and consolidated into one company, called PorkyProductions, which is where we are today.
