added types for javascript links

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     ></script>
     <!-----SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS----->
 
-    <script src="js/Utility.js"></script>
-    <script src="js/Header.js"></script>
-    <script src="js/index.js"></script>
+    <script type="text/javascript" src="js/Utility.js"></script>
+    <script type="text/javascript" src="js/Header.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
 
     <link rel="stylesheet" href="css/Header.css" />
     <link rel="stylesheet" href="css/MasterStyle.css" />
