fixed wierd uppercase in (M)odels.html and also added description of myself

--- a/Models.html
+++ b/Models.html
@@ -99,7 +99,7 @@
         <a class="center" href="index.html">Home</a>
         <a class="center" href="games.html">Games</a>
         <a class="center" href="3DPrints.html">3D Prints</a>
-        <a class="center" href="Models.html">Models</a>
+        <a class="center" href="models.html">Models</a>
         <a class="center" href="develop.html">Developments</a>
         <a class="center" href="https://practical-lamport-2debac.netlify.app/">Sister Site (identical, if this site doesn't work, try this)</a>
     </div>
