--- a/games.html
+++ b/games.html
@@ -38,7 +38,7 @@
             <a href="index.html">Home</a>
             <a class="active" href="games.html">Games</a>
             <a href="3DPrints.html">3D Prints</a>
-            <a href="Models.html">Models</a>
+            <a href="models.html">Models</a>
             <a href="develop.html">Developments</a>
         </div>
     </div>
