--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <a class="active" href="index.html">Home</a>
         <a href="games.html">Games</a>
         <a href="3DPrints.html">3D Prints</a>
-        <a href="Models.html">Models</a>
+        <a href="models.html">Models</a>
         <a href="develop.html">Developments</a>
       </div>
     </div>
@@ -186,7 +186,14 @@
                   <h5> (HedgehogDubz) </h5>
                   <img src="https://avatars.githubusercontent.com/u/53802238?v=4" width="210px" alt="tristan's avatar" />
                   <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos nesciunt ex qui dolorum a obcaecati sequi amet tempora alias, nisi ea, nam nostrum commodi deleniti. Tempora facilis similique culpa fuga!.
+                      Tristan is a software / hardware developer as a hobbiest.
+                      He uses a multitude of languages to accomodate to his needs
+                      Some of these languages include: HTML, CSS, Javascript + (jQuery), C# + (Winforms, .Net, Unity), Java, Typescript,
+                      Python, and aspx.
+                      Has a 3D printer and all creations can be seen in his <a href="3DPrints.html">3D Prints Tab</a> tab.
+                      Also creates models seen in the <a href="models.html">Models Tab</a>
+                      Also creates games but currently none are published.
+
                   </p>
               </div>
               <div class="mainBody-tile">
