fixed some broken stuff

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                       <img src="https://avatars.githubusercontent.com/u/53802238?v=4" width="210px" alt="tristan's avatar" />
                       <p>
                           Tristan is a software / hardware developer as a hobbiest.
-                          He uses a multitude of languages to accomodate to his needs
+                          He uses a multitude of languages to accomodate to his needs.
                           Some of these languages include: HTML, CSS, Javascript + (jQuery), C# + (Winforms, .Net, Unity), Java, Typescript,
                           Python, and aspx.
                           Has a 3D printer and all creations can be seen in his <a href="3DPrints.html">3D Prints Tab</a> tab.
