--- a/404.html
+++ b/404.html
@@ -10,6 +10,7 @@
     <title>404 Page Not Found</title>
 </head>
 <body>
+    <img alt="PorkyProductions logo" src="assets/PPio logo.png" />
     <h1 class="mainTitle">404</h1>
     <h3 class="mainTitle">Thats an Error</h3>
     <h4 class="mainBody">The page you are looking for does not exist</h4>
