--- a/3DPrints.html
+++ b/3DPrints.html
@@ -40,7 +40,7 @@
             <a href="index.html">Home</a>
             <a href="games.html">Games</a>
             <a class="active" href="3DPrints.html">3D Prints</a>
-            <a href="Models.html">Models</a>
+            <a href="models.html">Models</a>
             <a href="develop.html">Developments</a>
         </div>
     </div>
