fixed ryans trash css code

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                   <div class="mainBody-tile">
                       <h3>Tristan</h3>
                       <h5> (HedgehogDubz) </h5>
-                      <img src="https://avatars.githubusercontent.com/u/53802238?v=4" width="210px" alt="tristan's avatar" />
+                      <img src="https://avatars.githubusercontent.com/u/53802238?v=4" width="210" alt="tristan's avatar" />
                       <p>
                           Tristan is a software / hardware developer as a hobbiest.
                           He uses a multitude of languages to accomodate to his needs.
@@ -150,7 +150,7 @@
                   <div class="mainBody-tile">
                       <h3>Ryan</h3>
                       <h5> (hiteacheryouare) </h5>
-                      <img src="https://avatars.githubusercontent.com/u/82683251?v=4" alt="ryan's avatar" />
+                      <img src="https://avatars.githubusercontent.com/u/82683251?v=4" width="210" alt="ryan's avatar" />
                       <p>
                           Ryan is a software developer as a hobbiest.
                           He is currently learning many differnt languages and their use cases.
