--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                   Our story begins in 2017, when our founders, Tristan and Ryan met in school.
                   They became friends and eventually discorvered that they could make a website using the "Google Sites" service.
                   What better thing to make a website about than a hedgehog pencil sharpener that Tristan had brought to school and named "Porky".
-                  After this website (PorkyPictures.inc) was created, many other websites followed such as PorkySchool.edu, PorkyPizza.eat, and <br />PorkyBlackHolesThatWillDestroyTheEntireUniverseSoYouProbably-<br>ShouldntUseThem.com.com.inc  <br>
+                  After this website (PorkyPictures.inc) was created, many other websites followed such as PorkySchool.edu, PorkyPizza.eat, and <br />PorkyBlackHolesThatWillDestroyTheEntireUniverse-<br>SoYouProbablyShouldntUseThem.com.com.inc  <br>
                  <br />
                   At this point, Porky had developed a cult following. But then, sadly, a hater of porky stole the pencil sharpener, and destroyed it.
                   However, at the last moment, Porky transferred into a Hedgehog plush, where it resides to this day.
