added padding rules and a new gradient

--- a/games.html
+++ b/games.html
@@ -48,7 +48,11 @@
             <h1>Hedgehog Studios Games</h1>
         </div>
         <br />
-        <p class="mainBody">WORDS WORDS WORDS WORDS WORDS WORDS</p>
+    </div>
+    <div class="rainbow-gradient">
+        <h1 class="mainTitle padding-xlarge">
+            Platforms
+        </h1>
     </div>
     <div class="footer">
         <br>
