--- a/games.html
+++ b/games.html
@@ -49,8 +49,8 @@
         </div>
         <br />
     </div>
-    <div class="rainbow-gradient">
-        <h1 class="mainTitle padding-xlarge">
+    <div class="dark-blue-gradient">
+        <h1 class="mainTitle-white padding-xlarge">
             Platforms
         </h1>
     </div>
