--- a/games.html
+++ b/games.html
@@ -54,6 +54,11 @@
             Platforms
         </h1>
     </div>
+    <div>
+        <p class="mainBody center padding-small">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni deleniti blanditiis ipsa perferendis a vitae architecto nulla quibusdam, itaque, quod doloremque animi facere, nisi alias quidem explicabo error tempora placeat.
+        </p>
+    </div>
     <div class="footer">
         <br>
         <br>
