added a new gradient and started work on games page

--- a/games.html
+++ b/games.html
@@ -59,6 +59,19 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni deleniti blanditiis ipsa perferendis a vitae architecto nulla quibusdam, itaque, quod doloremque animi facere, nisi alias quidem explicabo error tempora placeat.
         </p>
     </div>
+
+    <div class="dark-green-gradient">
+        <h1 class="mainTitle-white padding-xlarge">
+            Currently Avalible Games
+        </h1>
+    </div>
+    <div>
+        <p class="mainBody center padding-small">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni deleniti blanditiis ipsa perferendis a vitae architecto nulla quibusdam, itaque, quod doloremque animi facere, nisi alias quidem explicabo error tempora placeat.
+        </p>
+    </div>
+
+
     <div class="footer">
         <br>
         <br>
