finished work on games page (still has dummy text)

--- a/games.html
+++ b/games.html
@@ -62,7 +62,19 @@
 
     <div class="dark-green-gradient">
         <h1 class="mainTitle-white padding-xlarge">
-            Currently Avalible Games
+            Currently Available Games
+        </h1>
+    </div>
+    <div>
+        <p class="mainBody center padding-small">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni deleniti blanditiis ipsa perferendis a vitae architecto nulla quibusdam, itaque, quod doloremque animi facere, nisi alias quidem explicabo error tempora placeat.
+        </p>
+    </div>
+
+
+    <div class="grey-gradient">
+        <h1 class="mainTitle-white padding-xlarge">
+            Games In Development
         </h1>
     </div>
     <div>
