added a small description to the models page

--- a/models.html
+++ b/models.html
@@ -48,6 +48,9 @@
     <div style="padding-left: 20px">
         <div class="mainTitle">
             <h1>3D Model Showcase</h1>
+            <p class="mainBody center padding-small">
+                This page will be updated periodically with new models as they are made.
+            </p>
         </div>
         <br />
         <div class="mainBody-grid">
