--- a/games.html
+++ b/games.html
@@ -79,7 +79,7 @@
     </div>
     <div>
         <p class="mainBody center padding-small">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni deleniti blanditiis ipsa perferendis a vitae architecto nulla quibusdam, itaque, quod doloremque animi facere, nisi alias quidem explicabo error tempora placeat.
+            Hedgehog Studios is currently working on a new local multiplayer (LAN) fighting game. It is unkown when the game will be realeased.
         </p>
     </div>
 
