--- a/games.html
+++ b/games.html
@@ -56,7 +56,7 @@
     </div>
     <div>
         <p class="mainBody center padding-small">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni deleniti blanditiis ipsa perferendis a vitae architecto nulla quibusdam, itaque, quod doloremque animi facere, nisi alias quidem explicabo error tempora placeat.
+            We currently only publish our games to the Microsoft Windows platform, as well as the web using the HTML5 standard. Future platforms include macOS, GNU+Linux, the Xbox Series X|S, Nintendo Switch, and the Playstation 5.
         </p>
     </div>
 
