fixed link to fit new

--- a/develop.html
+++ b/develop.html
@@ -67,7 +67,7 @@
                 <p class="mainBody block-description-text" >
                     Our flagship product. (de)Motivator is a simple web application that generates a random insult for the user. It is written in TypeScript and HTML + CSS.
                     It is currently being developed by PorkyProductions. <br />
-                    <a href="https://porkyproductions.github.io/-de-Motivator" class="mainBody block-description-text">(de)Motivator</a>
+                    <a href="https://porkyproductions.github.io/deMotivator" class="mainBody block-description-text">(de)Motivator</a>
                 </p>
             </div>
             <br>
