--- a/models.html
+++ b/models.html
@@ -104,6 +104,7 @@
         <a class="center" href="3DPrints.html">3D Prints</a>
         <a class="center" href="models.html">Models</a>
         <a class="center" href="develop.html">Developments</a>
+        <a class="center" href="credits.html">Credits</a>
         <a class="center" href="https://practical-lamport-2debac.netlify.app/">Sister Site (identical, if this site doesn't work, try this)</a>
     </div>
 </body>
