--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                       <img src="https://avatars.githubusercontent.com/u/82683251?v=4" width="210" alt="ryan's avatar" />
                       <p>
                           Ryan is a software developer as a hobbiest.
-                          He is currently learning many differnt languages and their use cases.
+                          He is currently learning many differnt languages.
                           Some of these languages include: HTML, CSS, JavaScript, Python, C# via .NET 6, TypeScript, and Kotlin.
                           Ryan is working on a variety of projects which you can see in his <a href="https://github.com/hiteacheryouare/projects">GitHub repository</a>
                       </p>
