made it more clear

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                       <p>
                           Ryan is a software developer as a hobbiest.
                           He is currently learning many differnt languages.
-                          Some of these languages include: HTML, CSS, JavaScript, Python, C# via .NET 6, TypeScript, and Kotlin.
+                          Some of these languages include: HTML, CSS, JavaScript, Python, C# via .NET 6, TypeScript, and Kotlin (although this was put on hold to learn C# to use Xamarin with .NET).
                           Ryan is working on a variety of projects which you can see in his <a href="https://github.com/hiteacheryouare/projects">GitHub repository</a>
                       </p>
                   </div>
