added closing break tag

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="google-site-verification" content="tjDM7Pn8FDUHGsa6jqtmbDO1-MK8m3YNE56-iu2GxXc" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="The Offical Website of PorkyProductions">
-    <meta name="apple-touch-icon" content="assets/HedgehogIcon.png">
+    <meta name="apple-touch-icon" content="assets/HedgehogIcon.png" />
     <title>Home - Porky Productions</title>
     <script src="https://code.jquery.com/jquery-3.3.1.js"
             integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
