added padding to title

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <br />
 
     <div>
-      <div class="mainTitle">
+      <div class="mainTitle padding-semi-large">
         <h1>PorkyProductions</h1>
       </div>
       <br />
